# array-compressor

./: CMakeLists.txt  Code Design Test - For Candidates.docx  README.md
src/: CMakeLists.txt  main.cpp  unit-test.cpp
src/utils/: CMakeLists.txt  system.cpp  system.h
